Modificaciones esteticas y pequeños retoques

--- a/MasterMind/MasterMind.csproj
+++ b/MasterMind/MasterMind.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Formularios\ControlUsuario.Designer.cs">
       <DependentUpon>ControlUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\FormPopUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\FormPopUp.Designer.cs">
+      <DependentUpon>FormPopUp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Formularios\FormConfiguracion.resx">
@@ -90,6 +96,9 @@
     <EmbeddedResource Include="Formularios\ControlUsuario.resx">
       <DependentUpon>ControlUsuario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\FormPopUp.resx">
+      <DependentUpon>FormPopUp.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -98,6 +107,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -111,6 +121,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\stonks_opt.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\notStonks.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fond_opt.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
